@@ -1,0 +1,18 @@
+<h1>新晉女團QWER最新EP《演算法的花朵》帶來正能量！成員親述與(G)I-dle Soyen和IDIOTAPE合作的幕後故事</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TUGodFO8f9A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>由YouTuber金계란（Kim Gye-ran）組成的企劃樂團QWER，於去年十月出道。成員包括鼓手Chodan、吉他兼鍵盤手Hina、貝斯手Magenta和主唱Siyeon。</p>
+<p>樂團的第二張EP《演算法的花朵》（Algorithm's Blossom）於週一發行。主打歌《我的名字是清晰度》（My Name is Malguem）以韓語詞彙「清晰度」（Malgeum）命名，表達了即使經歷痛苦或悲傷，也要勇敢前進的決心。</p>
+<p>這張專輯邀請了多位藝人合作。主打歌由(G)I-dle的Soyeon（전소연）作詞作曲，intro和outro由電子三人組IDIOTAPE（Idiotape）負責，而《Run! Run! Run!》是Chodan和Magenta的首次合作，由作曲家秀珉（Sumin）創作。</p>
+<p>Hina表示：「在樂團成立初期，我們搜尋了許多歌曲，並參加了各種表演，以拓寬我們的音樂視野。我曾經觀看過IDIOTAPE的表演，對他們透過音樂講故事的能力印象深刻。我認為他們能夠將我們的故事融入音樂中，所以這次決定與他們合作。」</p>
+<p>Hina還提到Soyeon作為經驗豐富的K-pop明星，提供了寶貴的幫助。「Soyeon給我們提供了拍攝和錄音的建議，甚至親自加入我們的錄音室，指導我們如何強調和改善我們的聲音。」</p>
+<p>Chodan表示：「當我第一次聽到《Run! Run! Run!》時，我擔心我們是否能夠呈現這首歌的色彩。但是歌詞中關於全力奔跑的內容，與我們樂團的成長過程產生了共鳴。」</p>
+<p>儘管QWER成立不到一年，但他們在今年四月發行的《T.B.H》獲得了廣泛的喜愛，並在全國各大學的音樂節和仁川Pentaport搖滾音樂節（Incheon Pentaport Festival）等活動中表演。</p><div>
+<p>Hina 表示，Pentaport 是樂團的夢想舞台，能夠與其他傑出的藝人同台演出，是他們的榮幸。他們努力練習和排練，感激能夠將準備好的內容呈現給大家。</p>
+<p>Chodan 補充，即使需要熬夜，他們從不跳過練習和課程，這是為什麼他們的和諧感越來越好的原因。</p>
+<p>Siyeon 表示，她希望能夠像《T.B.H》一樣獲得大家的關注。</p>
+<p>她說：「當然，排名不是最重要的，但我希望在年底前能夠再次登上榜單的好位置。我們希望能夠獲得大家的支持。」</p>
+<p></div></p>
+
+<p>資料來源： Korea Herald</p>
