@@ -31,3 +31,4 @@ https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20240924050725
 https://www.koreaherald.com/view.php?ud=20240924050642
 https://www.koreaherald.com/view.php?ud=20240924050632
+https://www.koreaherald.com/view.php?ud=20240924050461
